<resources>
    <string name="mine_collection">我的收藏</string>
    <string name="ntegral_mall">积分商城</string>
    <string name="share_frend">分享好友</string>
    <string name="sign_in_obtain_cash_coupon">签到领券</string>
    <string name="cooperate_with_me">与我合作</string>
    <string name="feedback">问题反馈</string>
    <string name="project_lab">浙江大学软件学院S405</string>
    <string name="source_code">项目源码</string>
    <string name="about_project">关于项目</string>
    <string name="share_to">分享至...</string>
    <string name="share_content">万众艺兴</string>
    <string name="title_activity_collection">我的收藏</string>
    <string name="github_mine">https://github.com/DeIaube/YiXing</string>
    <string name="bug_bug_bug_can_rise_integral">听说买买买能涨积分呢~</string>
    <string name="title_activity_feedback">问题反馈</string>
    <string name="feedback_content">内容</string>
    <string name="feedback_title">请输入问题标题</string>
    <string name="confirm_exit">确定要退出么</string>
    <string name="content_not_null">内容不能为空</string>
    <string name="title_not_null">标题不能为空</string>
    <string name="feedback_submit_succeed">提交成功</string>
    <string name="title_activity_setting">设置</string>
    <string name="image_load_check_summary">选择图片加载模式</string>
    <string name="image_load_check_title">加载高清图片</string>
    <string name="dynamic_feedback_summary">期待您的反馈呢~</string>
    <string name="dynamic_feedback_title">摇一摇,截屏反馈问题</string>
    <string name="clear_cache_title">清除缓存</string>
    <string name="clear_cache_summary">清除缓存图片以及数据</string>
    <string name="mine_order">我的订单</string>
    <string name="title_activity_notice">我的通知</string>
    <string name="title_activity_integral">IntegralActivity</string>
</resources>
