<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/collection_layout"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <ImageView
            android:layout_marginStart="16dp"
            android:src="@drawable/mine_collection"
            android:layout_gravity="center_vertical"
            android:layout_width="24dp"
            android:layout_height="24dp" />

        <TextView
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:text="@string/mine_collection"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/cart_layout"
        android:background="@color/white"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <ImageView
            android:layout_marginStart="16dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/mine_cart"
            android:layout_width="24dp"
            android:layout_height="24dp" />

        <TextView
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:text="@string/mine_cart"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/integral_mall_layout"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <ImageView
            android:layout_marginStart="16dp"
            android:src="@drawable/mine_shop"
            android:layout_gravity="center_vertical"
            android:layout_width="24dp"
            android:layout_height="24dp" />

        <TextView
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:text="@string/ntegral_mall"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/sign_in_obtain_cash_coupon_layout"
        android:background="@color/white"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <ImageView
            android:layout_marginStart="16dp"
            android:src="@drawable/mine_cash_coupon"
            android:layout_gravity="center_vertical"
            android:layout_width="24dp"
            android:layout_height="24dp" />

        <TextView
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:text="@string/sign_in_obtain_cash_coupon"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/feedback"
        android:background="@color/white"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <ImageView
            android:layout_marginStart="16dp"
            android:src="@drawable/mine_feedback"
            android:layout_gravity="center_vertical"
            android:layout_width="24dp"
            android:layout_height="24dp" />

        <TextView
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:text="@string/feedback"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/share_layout"
        android:background="@color/white"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <ImageView
            android:layout_marginStart="16dp"
            android:src="@drawable/mine_share"
            android:layout_gravity="center_vertical"
            android:layout_width="24dp"
            android:layout_height="24dp" />

        <TextView
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:text="@string/share_frend"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="16dp"
        android:id="@+id/cooperate_layout"
        android:background="@color/white"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <ImageView
            android:layout_marginStart="16dp"
            android:src="@drawable/mine_cooperate"
            android:layout_gravity="center_vertical"
            android:layout_width="24dp"
            android:layout_height="24dp" />

        <TextView
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:text="@string/cooperate_with_me"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/about_layout"
        android:background="@color/white"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <ImageView
            android:layout_marginStart="16dp"
            android:src="@drawable/mine_about"
            android:layout_gravity="center_vertical"
            android:layout_width="24dp"
            android:layout_height="24dp" />

        <TextView
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:text="@string/about_project"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/github_layout"
        android:background="@color/white"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <ImageView
            android:layout_marginStart="16dp"
            android:src="@drawable/mine_github"
            android:layout_gravity="center_vertical"
            android:layout_width="24dp"
            android:layout_height="24dp" />

        <TextView
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:text="@string/source_code"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <TextView
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:text="@string/project_lab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
